<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgound_login">

        <TextView
            android:id="@+id/tx_forget_your_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/forget_your_password"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tx_put_mail_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/put_mail_here"
            android:textColor="@color/blue_lite"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_forget_your_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forget_password_et_email"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_put_mail_here">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:hint="Email Address"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_reset_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/round"
            android:backgroundTint="@color/app_color"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_17ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_password_et_email" />

        <TextView
            android:id="@+id/et_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="don't have an account"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_reset_pass" />

        <TextView
            android:id="@+id/et_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/sign_up"
            android:textColor="@color/blue_lite"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toEndOf="@id/et_dont_have_account"
            app:layout_constraintTop_toBottomOf="@+id/btn_reset_pass" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>