<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgound_login">

        <TextView
            android:id="@+id/wellcom_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/wellcom_back"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_login_email"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/wellcom_back">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:hint="Email Address"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_login_password"
            style="@style/EditText"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/et_login_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:hint="password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/et_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/forget_your_password"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_login_password" />
        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/round"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:backgroundTint="@color/app_color"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_forget_password" />

        <TextView
            android:id="@+id/et_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="don't have an account"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

        <TextView
            android:id="@+id/tx_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/sign_up"
            android:textColor="@color/blue_lite"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toEndOf="@id/et_dont_have_account"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>